<resources>
    <string name="app_name">USTH Weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_image_description">DEFAULT DESCRIPTION</string>

    <!-- Names of cities -->
    <string name="Hanoi">Hanoi</string>
    <string name="Stockholm">Stockholm</string>
    <string name="Moscow">Moscow</string>

    <!--Days of the week -->
    <string name="Mon">Monday</string>
    <string name="Tue">Tuesday</string>
    <string name="Wed">Wednesday</string>
    <string name="Thu">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>
    <string name="Sun">Sunday</string>

    <!-- Weather -->
    <string name="Freezing">Freezing</string>
    <string name="Sunlike">Sunlike</string>
    <string name="Toohawt">Too hawt</string>
    <string name="Humid">Humid</string>
    <string name="Stormy">Stormy boi</string>
    <string name="Windy">Blowy</string>
    <string name="Dry">Dry</string>

</resources>
