<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forecast_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WeatherActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/day1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Mon"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="40 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Tue"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/rain" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="24 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Wed"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/rainbow" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="19 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Thu"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/spring" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="33 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Fri"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/fullmoon" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="24 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Sat"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/tsunami" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="16 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8px"
        android:paddingBottom="8px">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/Sun"
            android:textColor="@android:color/white"
            android:textSize="50px" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/default_image_description"
            android:src="@drawable/winter" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="30 degrees"
            android:textSize="50px"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>
